After refactoring picker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 
-<vehicle-comparison></vehicle-comparison>
+<main>
+  <div class="container py-3">
+    <vehicle-comparison></vehicle-comparison>
+  </div>
+</main>
 
 <router-outlet />
