--- a/src/app/vehicle-comparison/vehicle-comparison.component.scss
+++ b/src/app/vehicle-comparison/vehicle-comparison.component.scss
@@ -1,14 +1,3 @@
-.form-entry {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-}
-
-.form-label {
-  text-align: end;
-  width: 175px;
-  margin-right: 10px
-}
 
 .form-summary {
   margin-top: 50px;
@@ -26,4 +15,13 @@
 
 .ev-cost-percentage {
   margin-bottom: 10px;
+}
+
+.single-cost-summary {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.cost-summary-table {
+  max-width: 400px;
 }
