--- a/src/app/vehicle-comparison/vehicle-comparison.component.html
+++ b/src/app/vehicle-comparison/vehicle-comparison.component.html
@@ -63,7 +63,10 @@
         <div class="card-body text-start">
           <app-vehicle-picker #vehiclePickerOne [buttonText]="'Set Vehicle #1'" (vehicleSelected)="setVehicleOne($event)"></app-vehicle-picker>
 
-          <app-single-vehicle-stats #vehicleOne (selectedVehicleStats)="this.vehicleOneStats$.next($event)"></app-single-vehicle-stats>
+          <app-single-vehicle-stats
+            #vehicleOne
+            (selectedVehicleStats)="this.vehicleOneStats$.next($event)"
+            [btnPrefix]="'vehicle1-'"></app-single-vehicle-stats>
 
           <div class='single-cost-summary' *ngIf="vehicleOneSummary$ | async as summary">
             <ng-container
@@ -95,7 +98,11 @@
         <div class="card-body text-start">
           <app-vehicle-picker #vehiclePickerTwo [buttonText]="'Set Vehicle #2'" (vehicleSelected)="setVehicleTwo($event)"></app-vehicle-picker>
 
-          <app-single-vehicle-stats #vehicleTwo (selectedVehicleStats)="this.vehicleTwoStats$.next($event)"></app-single-vehicle-stats>
+          <app-single-vehicle-stats
+            #vehicleTwo
+            (selectedVehicleStats)="this.vehicleTwoStats$.next($event)"
+            [btnPrefix]="'vehicle2-'"
+            ></app-single-vehicle-stats>
 
           <div class='single-cost-summary' *ngIf="vehicleTwoSummary$ | async as summary">
             <ng-container
